src/test/deca/context/invalid/oracle/wrong_type_return3.deca
class A{
    string f(){
        return "Hello World !";
    }
}